--- a/ProyectoUnidad1/Pagina/html/sistema.html
+++ b/ProyectoUnidad1/Pagina/html/sistema.html
@@ -6,7 +6,7 @@
 </head>
 
 <body style="margin: 0; background-color: aliceblue; font-family: 'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, 'sans-serif'">
-<table width="100%" border="0">
+<table width="100%" border="0" style="padding: 0; margin: 0">
   <tbody>
     <tr>
       <td height="69" ><header style="background-color: #08DD81">
@@ -15,12 +15,11 @@
             <tr>
               <td width="18%" height="33"><h1>LOGO - NOMBRE</h1></td>
               <td width="82%"><div align="right">
-				  <a href="index.html"><input type="button" value="Inicio"></a>
-				  <a href="html/empresa.html"><input type="button" value="Empresa"></a>
-                  <a href="html/productos.html"><input type="button" value="Productos"></a>
-				  <a href="html/contactos.html"><input type="button" value="Contactos"></a>
-				  <a href="html/sistema.html"><input type="button" value="Sistema"></a>
-				  
+				  <a href="../index.html"><input type="button" value="Inicio"></a>
+				  <a href="empresa.html"><input type="button" value="Empresa"></a>
+				  <a href="productos.html"><input type="button" value="Productos"></a>
+				  <a href="contactos.html"><input type="button" value="Contactos"></a>
+				  <a href="sistema.html"><input type="button" value="Sistema"></a>
 			    </div></td>
             </tr>
           </tbody>
@@ -30,15 +29,15 @@
     </tr>
     <tr>
       <td><main>
-          <p>&nbsp;</p>
+		  <p>&nbsp;</p>
           <p>&nbsp;</p>
 		  <p>&nbsp;</p>
-          <h1>Hola los i love you, att: el jefe uwu</h1>
-          <p>&nbsp;</p>
+          <h1>Sistema</h1>
+		  <p>&nbsp;</p>
           <p>&nbsp;</p>
 		  <p>&nbsp;</p>
-		  <p>&nbsp;</p>
-      </main></td>
+		  <p>&nbsp;</p> 
+        </main></td>
     </tr>
     <tr>
       <td style="background-color: #151515; color: azure"><footer><h3 align="center">&nbsp;</h3>
