--- a/ProyectoUnidad1/Pagina/html/FrmCliente.html
+++ b/ProyectoUnidad1/Pagina/html/FrmCliente.html
@@ -12,19 +12,40 @@
   <form id="form1" name="form1" method="get">
     <fieldset>
       <legend>Formulario</legend>
-      <table align="center" width="100%" border="1">
+      <table align="center" width="100%" border="0">
         <tbody>
-          <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+          <tr style="vertical-align: top">
+            <td >
+			    <label for="nombre">Nombre:</label><br>
+				<input type="text" id="nombre" name="nombre" required placeholder="Ingrese su nombre" style="width: 200px">
+				<br><br>
+				<label for="apellido">Apellido:</label><br>
+				<input type="text" id="apellido" name="apellido" required placeholder="Ingrese su apellido" style="width: 200px">
+				<br><br>
+				<label for="cedula">Número de Cédula:</label><br>
+				<input type="text" id="cedula" name="cedula" required placeholder="Ingrese su número de cédula" pattern="[0-9]{10}" style="width: 200px">	
+
+				
+			  </td>
+            <td>
+			    <label for="email">Correo Electrónico:</label><br>
+				<input type="email" id="email" name="email" required placeholder="usuario@dominio.com" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}" style="width: 200px">
+				<br><br>
+				<label for="telefono">Teléfono:</label><br>
+				<input type="tel" id="telefono" name="telefono" required placeholder="Ingrese su número de teléfono" pattern="[0-9]{10}" style="width: 200px">
+				<br><br>
+				<label for="direccion">Dirección:</label><br>
+				<input type="text" id="direccion" name="direccion" required placeholder="Ingrese su dirección" style="width: 200px">
+			  </td>
           </tr>
           <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td colspan="2">
+			  
+			  </td>
           </tr>
           <tr>
-            <td width="50%"><p align="center"><input type="submit" name="submit" id="submit" value="Enviar" style="width: 125px; height: 30px"></p></td>
-            <td><p align="center"><input type="reset" name="reset" id="reset" value="Restablecer" style="width: 125px; height: 30px"></p></td>
+            <td width="50%"></td>
+            <td><p align="right"><input type="submit" name="submit" id="submit" value="Enviar" style="width: 125px; height: 30px"> <input type="reset" name="reset" id="reset" value="Restablecer" style="width: 125px; height: 30px"></p></td>
           </tr>
         </tbody>
       </table>
