home,contactos, empresa

--- a/ProyectoUnidad1/Pagina/html/contactos.html
+++ b/ProyectoUnidad1/Pagina/html/contactos.html
@@ -29,23 +29,95 @@
     </tr>
     <tr>
       <td><main>
-		  <p>&nbsp;</p>
+        <table width="100%" border="0">
+            <tbody>
+              <tr>
+                <th colspan="10"><h1>CONTACTOS</h1></th>
+              </tr>
+              <tr>
+                <td width="11%" rowspan="2" align="right"><img src="../img/mail.png" width="70" height="50" alt=""/></td>
+                <td colspan="4" rowspan="2"><strong>Atención al cliente:</strong> nahir.angulo@suavetex.com</td>
+                <td colspan="5" align="center"><strong>QUITO</strong></td>
+              </tr>
+              <tr>
+                <td colspan="5" rowspan="3" align="center"><img src="../img/mapa.png" width="600" height="400" alt=""/></td>
+              </tr>
+              <tr>
+                <td align="right"><img src="../img/home.png" width="70" height="50" alt=""/></td>
+                <td colspan="4"><p><strong>Dirección:</strong></p>
+                  <p><strong>Quito<br>
+                    </strong>Av. Naciones Unidas y Avenida de los Shyris, Quito – Ecuador.</p>
+                  <p><strong>Esmeraldas<br>
+                </strong>Calle Simón Bolívar y Salinas.</p></td>
+              </tr>
+              <tr>
+                <td align="right"><img src="../img/telef.png" width="70" height="50" alt=""/></td>
+                <td colspan="4"><p><strong>Teléfonos:<br>
+                  </strong> 02 230 8143 / 02 321 1599 / 02 310 1249 /02 540 5591</p>
+                <p>099 139 0118</p></td>
+              </tr>
+              <tr>
+                <td align="right"><img src="../img/horio.png" width="70" height="50" alt=""/></td>
+                <td colspan="4"><p><strong>Horario Almacén Quito:</strong><br>
+                   Lunes a Sábado de 10:00 a 18:00.
+                  </p>
+                  <p><strong>Horario Almacén Esmeraldas:</strong><br>
+                 Lunes a Viernes de 10:00 a 18:00</p></td>
+                <td align="right"><img src="../img/social.png" width="140" height="50" alt=""/></td>
+                <td colspan="4" >
+				  <h2  align="center">Redes Sociales</h2>
+                  <p>Síguenos en nuestras redes sociales para estar al tanto de las últimas novedades y promociones:</p>
+                    <ul>
+                      <li><a href="https://www.facebook.com/cobertoresdumont" target="_blank">Facebook</a></li>
+                      <li><a href="https://www.instagram.com/kapya.uio/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==" target="_blank">Instagram</a></li>
+                    </ul>
+				  
+				  </td>
+              </tr>
+            </tbody>
+          </table>
           <p>&nbsp;</p>
-		  <p>&nbsp;</p>		  
-          <h1>Contactos</h1>
-		  <p>&nbsp;</p>
-          <p>&nbsp;</p>
-		  <p>&nbsp;</p>
-		  <p>&nbsp;</p> 
-        </main></td>
+      </main></td>
     </tr>
     <tr>
-      <td style="background-color: #151515; color: azure"><footer><h3 align="center">&nbsp;</h3>
-        <p>&nbsp;</p>
-        <h3 align="center">Pie de pagina</h3>
-		<p>&nbsp;</p>
-        <p>&nbsp;</p>
-      </footer></td>
+      <td style="background-color: #151515; color: azure">
+                    <!-- Sección 3 - Pie de página -->
+
+				<footer>
+					<table width="100%" border="0">
+						<tr>
+							<td width="33%">
+								<img src="../img/logo2_SuavTex.png" width="200" height="150" alt=""/>
+							</td>
+							<td width="33%">
+								<h3>QUITO</h3>
+								<p>Dirección: Av. Naciones Unidas y Avenida de los Shyris, Quito – Ecuador.</p>
+								<p>Horario Almacén Quito:</p>
+								<ul>
+									<li>Lunes a sábado de 10:00 a 18:00.</li>
+								</ul>
+								<p>Teléfonos: 02 230 8143 / 02 321 1599</p>
+								<p>WhatsApp: 099 139 0118</p>
+								<p>Email: cabazurto@suavetex.com</p>
+							</td>
+							<td width="33%">
+								<h3>ESMERALDAS</h3>
+								<p>Dirección: Calle Simón Bolívar y Salinas.</p>
+								<p>Horario Almacén Esmeraldas:</p>
+								<ul>
+									<li>Lunes a viernes de 10:00 a 18:00.</li>
+								</ul>
+								<p>WhatsApp: 099 543 4884</p>
+								<p>Email: sebastian.drouet@suavetex.com</p>
+							</td>
+						</tr>
+						<tr>
+							<td colspan="3" align="center">
+								<p>SUAVTEX. TODOS LOS DERECHOS RESERVADOS.</p>
+							</td>
+						</tr>
+					</table>
+				</footer></td>
     </tr>
   </tbody>
 </table>
