--- a/ProyectoUnidad1/Pagina/html/empresa.html
+++ b/ProyectoUnidad1/Pagina/html/empresa.html
@@ -1,53 +1,156 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="es">
 <head>
-<meta charset="utf-8">
-<title>pagina</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SUAVETEX - Empresa</title>
 </head>
-
 <body style="margin: 0; background-color: aliceblue; font-family: 'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, 'sans-serif'">
-<table width="100%" border="0" style="padding: 0; margin: 0">
-  <tbody>
-    <tr>
-      <td height="69" ><header style="background-color: #08DD81">
-        <table width="100%" height="100%" border="0">
-          <tbody>
+    <table width="100%" border="0" style="padding: 0; margin: 0">
+        <tbody>
             <tr>
-              <td width="18%" height="33"><h1>LOGO - NOMBRE</h1></td>
-              <td width="82%"><div align="right">
-				  <a href="../index.html"><input type="button" value="Inicio"></a>
-				  <a href="empresa.html"><input type="button" value="Empresa"></a>
-				  <a href="productos.html"><input type="button" value="Productos"></a>
-				  <a href="contactos.html"><input type="button" value="Contactos"></a>
-				  <a href="sistema.html"><input type="button" value="Sistema"></a>
-			    </div></td>
+                <td height="69">
+                    <header style="background-color: #08DD81">
+                        <table width="100%" height="100%" border="0">
+                            <tbody>
+                                <tr>
+                                    <td width="18%" height="33">
+                                        <h1>LOGO - NOMBRE</h1>
+                                    </td>
+                                    <td width="82%">
+                                        <div align="right">
+                                            <a href="../index.html"><input type="button" value="Inicio"></a>
+                                            <a href="empresa.html"><input type="button" value="Empresa"></a>
+                                            <a href="productos.html"><input type="button" value="Productos"></a>
+                                            <a href="contactos.html"><input type="button" value="Contactos"></a>
+                                            <a href="sistema.html"><input type="button" value="Sistema"></a>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </header>
+                </td>
             </tr>
-          </tbody>
-        </table>
-		  
-		  </header></td>
-    </tr>
-    <tr>
-      <td><main>
-		  <p>&nbsp;</p>
-          <p>&nbsp;</p>
-		  <p>&nbsp;</p>
-          <h1>Empresa</h1>
-		  <p>&nbsp;</p>
-          <p>&nbsp;</p>
-		  <p>&nbsp;</p>
-		  <p>&nbsp;</p>          
-        </main></td>
-    </tr>
-    <tr>
-      <td style="background-color: #151515; color: azure"><footer><h3 align="center">&nbsp;</h3>
-        <p>&nbsp;</p>
-        <h3 align="center">Pie de pagina</h3>
-		<p>&nbsp;</p>
-        <p>&nbsp;</p>
-      </footer></td>
-    </tr>
-  </tbody>
-</table>
+            <tr>
+                <td>
+                  <main>
+                        <!-- Sección 1 -->
+                        <table width="100%" border="0">
+							<tr>
+								<td width="50%">
+									<!-- Video -->
+									<iframe width="100%" height="315" src="https://www.youtube.com/embed/sIF44pRUPbw?si=IgqGUEXrhBk4Jn32" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+								</td>
+								<td width="50%">
+									<!-- Información de la empresa -->
+									<h2 align="center">SOMOS SUAVETEX</h2>
+									<p>Suavetex tiene sus raíces en la ciudad de Quito en los años 1999. Desde nuestros humildes comienzos, hemos crecido y evolucionado, manteniendo siempre nuestro compromiso con la calidad y la satisfacción del cliente.</p>
+									<h3>Misión</h3>
+									<p>En Suavetex, nos comprometemos a proporcionar productos de alta calidad que satisfagan las necesidades y expectativas de nuestros clientes, contribuyendo al bienestar y la comodidad en sus vidas diarias.</p>
+
+								  <h3>Visión</h3>
+									<p>Aspiramos a ser líderes en la industria textil, reconocidos por nuestra excelencia en calidad y servicio. Buscamos innovar continuamente para anticipar las tendencias del mercado y mejorar la experiencia de nuestros clientes.									</p>
+									<p>&nbsp;</p>
+							  </td>
+							</tr>
+						</table>
+
+
+                       <!-- Sección 2 -->
+				<h2 style="text-align: center;">NUESTROS VALORES</h2>
+				<table width="100%" border="0" align="center">
+					<tr align="center">
+					  <td>
+						<img src="../img/calidad.png" width="570" height="150" alt="Integridad">
+
+						</td>
+					  <td><p style="text-align: center;"><strong>CALIDAD</strong><br>
+					    Elaborar artículos que sean tanto funcionales como perdurables, con el propósito de fomentar el consumo local y proporcionar productos que satisfagan las necesidades de los clientes a largo plazo.</p>
+					  </td>
+					</tr>
+					<tr align="center">
+						<td><p style="text-align: center;"><strong>RESPONSABILIDAD</strong><br>
+						  Actuar como fuentes de empleo confiables con el fin de fortalecer la industria, contribuyendo así al desarrollo económico y a la estabilidad laboral.</p>
+						</td>
+						<td>
+							<img src="../img/respon.png" width="570" height="150" alt="Otro Valor">
+						</td>
+					</tr>
+					<tr align="center">
+					  <td>
+						<img src="../img/versatilidad.png" width="570" height="150" alt="Integridad">
+
+						</td>
+					  <td><p style="text-align: center;"><strong>VERSATILIDAD</strong><br>
+					    Demostrar apertura y flexibilidad en la gestión y en las especificaciones de nuestros productos, adaptándonos a las demandas del mercado y a las expectativas de los diferentes actores involucrados en nuestro negocio.</p>
+					  </td>
+					</tr>
+					<tr align="center">
+						<td> <p style="text-align: center;"><strong>EFICIENCIA</strong><br>
+						  Dedicarnos a alcanzar y superar nuestras metas de manera constante, con el propósito de ofrecer un servicio más efectivo y cumplir con las expectativas del mercado mediante estándares de calidad y eficacia en la prestación de servicios. </p>
+						</td>
+						<td>
+							<img src="../img/eficiencia.png" width="570" height="150" alt="Otro Valor">
+						</td>
+					</tr>
+					<tr align="center">
+					  <td>
+						<img src="../img/integridad.png" width="570" height="150" alt="Integridad">
+
+						</td>
+					  <td><p style="text-align: center;"><strong>INTEGRIDAD</strong><br>
+					    Buscar la transparencia en la gestión de nuestra empresa y en las características de los productos que ofrecemos, compartiendo información abierta y honesta, con clientes y proveedores.</p>
+					  </td>
+					</tr>
+				</table>
+
+                   </main>
+                </td>
+            </tr>
+            <tr>
+                <td style="background-color: #151515; color: azure">
+                    <!-- Sección 3 - Pie de página -->
+
+				<footer>
+					<table width="100%" border="0">
+						<tr>
+							<td width="33%">
+								<img src="../img/logo2_SuavTex.png" width="200" height="150" alt=""/>
+							</td>
+							<td width="33%">
+								<h3>QUITO</h3>
+								<p>Dirección: Av. Naciones Unidas y Avenida de los Shyris, Quito – Ecuador.</p>
+								<p>Horario Almacén Quito:</p>
+								<ul>
+									<li>Lunes a sábado de 10:00 a 18:00.</li>
+								</ul>
+								<p>Teléfonos: 02 230 8143 / 02 321 1599</p>
+								<p>WhatsApp: 099 139 0118</p>
+								<p>Email: cabazurto@suavetex.com</p>
+							</td>
+							<td width="33%">
+								<h3>ESMERALDAS</h3>
+								<p>Dirección: Calle Simón Bolívar y Salinas.</p>
+								<p>Horario Almacén Esmeraldas:</p>
+								<ul>
+									<li>Lunes a viernes de 10:00 a 18:00.</li>
+								</ul>
+								<p>WhatsApp: 099 543 4884</p>
+								<p>Email: sebastian.drouet@suavetex.com</p>
+							</td>
+						</tr>
+						<tr>
+							<td colspan="3" align="center">
+								<p>SUAVTEX. TODOS LOS DERECHOS RESERVADOS.</p>
+							</td>
+						</tr>
+					</table>
+				</footer>
+
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
