--- a/ProyectoUnidad1/Pagina/html/sistema.html
+++ b/ProyectoUnidad1/Pagina/html/sistema.html
@@ -33,7 +33,7 @@
           <fieldset style="border-radius: 10px;">
             <legend><b>Inicio de sesión</b></legend>
             <div style="width: 50%; margin: auto;">
-            <form action="sistemaFormularios.html" method="get">
+            <form action="sistemaFormularios.html" method="post">
               <br>
               <label for="usuario"><b>Usuario:</b></label><br>
               <input type="text" name="usuario" id="usuario" placeholder="Ingrese Usuario" required style="width: 100%; height: 30px; border-radius: 7px">
