--- a/ProyectoUnidad1/Pagina/html/sistemaFormularios.html
+++ b/ProyectoUnidad1/Pagina/html/sistemaFormularios.html
@@ -10,7 +10,7 @@
   <tbody>
     <tr>
       <td height="69" ><header style="background-color: #08DD81">
-        <table width="100%" height="100%" border="0">
+        <table width="100%" border="0">
           <tbody>
             <tr>
               <td width="18%" height="33"><h1>LOGO - NOMBRE</h1></td>
@@ -49,7 +49,7 @@
 				  </div>
 				  
 				</td>
-              <td width="80%"><div style="width: 95%; margin: auto"><iframe align="middle" name="formularios" width="100%" height="800" style="border: none; margin: auto"></iframe></div></td>
+              <td width="80%"><div style="width: 97%; margin: auto"><iframe align="middle" name="formularios" width="100%" height="800" style="border: none; margin: auto"></iframe></div></td>
             </tr>
           </tbody>
         </table>
@@ -57,10 +57,9 @@
       </main></td>
     </tr>
     <tr>
-      <td style="background-color: #151515; color: azure"><footer><h3 align="center">&nbsp;</h3>
-        <p>&nbsp;</p>
-        <h3 align="center">Pie de pagina</h3>
-        <p>&nbsp;</p>
+      <td style="background-color: #151515; color: azure;"><footer>
+		  <br>
+        <p align="right" style="font-size: 0.7rem">&copy; 2023 Tu Empresa. Todos los derechos reservados. &nbsp;&nbsp;</p>
       </footer></td>
     </tr>
   </tbody>
