--- a/ProyectoUnidad1/Pagina/html/FrmVenta.html
+++ b/ProyectoUnidad1/Pagina/html/FrmVenta.html
@@ -6,25 +6,89 @@
 </head>
 
 <body style="margin: 0; background-color: aliceblue; font-family: 'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, 'sans-serif'">
-<h3 align="center">Formulario de ventas</h3>
+<h3 align="center">VENTAS</h3>
 <hr>
-<div style="width: 60%; margin: auto">
-  <form id="form1" name="form1" method="get">
-    <fieldset>
-      <legend>Formulario</legend>
-      <table align="center" width="100%" border="1">
+<div style="width: 50%; margin: auto">
+  <form id="form1" name="form1" method="post">
+    <fieldset style="border-radius: 10px">
+      <legend><strong>Venta</strong></legend>
+      <table align="center" width="100%" border="0">
         <tbody>
-          <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+          <tr style="vertical-align: top">
+            <td>
+				<label for="numeroVenta">Numero de venta:</label><br>
+				<input type="number" id="numeroVenta" name="numeroVenta" required placeholder="Ingrese numero de venta" min="0" style="width: 90%; height: 25px" autofocus>
+				<br><br>
+			  <label for="cliente">Cliente:</label><br>
+				<select id="cliente" name="cliente" required style="width: 92%; height: 30px">
+					<option value="vacio">-</option>
+					<option value="Arias">Arias Sebastian</option>
+					<option value="Bazurto">Bazurto Christopher</option>
+					<option value="Carrera">Carrera Nahir</option>					
+				</select>
+				<br><br>
+			<input type="checkbox" name="consumidorFinal" id="consumidorFinal">
+            <label for="consumidorFinal">Consumidor Final </label>
+			  </td>
+            <td><label for="fechaVenta">Fecha de la venta:</label><br>
+            <input type="date" id="fechaVenta" name="fechaVenta" required style="width: 90%; height: 26px">
+				<br><br>
+				<label for="metodoPago">Método de pago:</label><br>
+				<select id="metodoPago" name="metodoPago" required style="width: 92%; height: 30px">
+					<option value="efectivo">Efectivo</option>
+					<option value="tarjeta">Tarjeta de crédito/débito</option>
+				</select>								
+				
+            </td>
+          </tr>
+			<tr>
+			<td colspan="2"><hr></td></tr>
+          <tr style="vertical-align: top">
+            <td><label for="productos">Productos vendidos:</label><br>
+
+        <select id="productos1" name="productos1" required style="width: 92%; height: 30px">
+			<option value="producto1">Producto 1</option>
+            <option value="producto2">Producto 2</option>
+			<option value="producto3">Producto 3</option>
+			<option value="producto4">Producto 4</option>
+        </select><br>
+			<select id="productos2" name="productos2" required style="width: 92%; height: 30px">
+            <option value="nada">-</option>
+			<option value="producto1">Producto 1</option>
+            <option value="producto2">Producto 2</option>
+			<option value="producto3">Producto 3</option>
+			<option value="producto4">Producto 4</option>
+        </select><br>
+			<select id="productos3" name="productos3" required style="width: 92%; height: 30px">
+            <option value="nada">-</option>
+			<option value="producto1">Producto 1</option>
+            <option value="producto2">Producto 2</option>
+			<option value="producto3">Producto 3</option>
+			<option value="producto4">Producto 4</option>
+        </select><br>
+			<select id="productos4" name="productos4" required style="width: 92%; height: 30px">
+            <option value="nada">-</option>
+			<option value="producto1">Producto 1</option>
+            <option value="producto2">Producto 2</option>
+			<option value="producto3">Producto 3</option>
+			<option value="producto4">Producto 4</option>
+        </select>
+			  
+			  </td>
+            <td><label for="cantidad1">Cantidad de cada producto:</label><br>
+        <input type="number" id="cantidad1" name="cantidad1" required placeholder="Ingrese la cantidad" value="1" min="1" style="width: 15%; height: 24px">
+				<br>
+        <input type="number" id="cantidad2" name="cantidad2" required placeholder="Ingrese la cantidad" value="0" min="0" style="width: 15%; height: 24px">
+				<br>
+        <input type="number" id="cantidad3" name="cantidad3" required placeholder="Ingrese la cantidad" value="0" min="0" style="width: 15%; height: 24px">
+				<br>
+        <input type="number" id="cantidad4" name="cantidad4" required placeholder="Ingrese la cantidad" value="0" min="0" style="width: 15%; height: 24px">
+
+</td>
           </tr>
           <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-          </tr>
-          <tr>
-            <td width="50%"><p align="center"><input type="submit" name="submit" id="submit" value="Enviar" style="width: 125px; height: 30px"></p></td>
-            <td><p align="center"><input type="reset" name="reset" id="reset" value="Restablecer" style="width: 125px; height: 30px"></p></td>
+            <td width="50%"></td>
+            <td><p align="right"><input type="submit" name="submit" id="submit" value="Enviar" style="width: 40%; height: 30px"> <input type="reset" name="reset" id="reset" value="Restablecer" style="width: 40%; height: 30px">&nbsp;</p></td>
           </tr>
         </tbody>
       </table>
