--- a/ProyectoUnidad1/Pagina/html/contactos.html
+++ b/ProyectoUnidad1/Pagina/html/contactos.html
@@ -13,13 +13,13 @@
         <table width="100%" height="100%" border="0">
           <tbody>
             <tr>
-              <td width="18%" height="33"><h1>LOGO - NOMBRE</h1></td>
-              <td width="82%"><div align="right">
-				  <a href="../index.html"><input type="button" value="Inicio"></a>
-				  <a href="empresa.html"><input type="button" value="Empresa"></a>
-				  <a href="productos.html"><input type="button" value="Productos"></a>
-				  <a href="contactos.html"><input type="button" value="Contactos"></a>
-				  <a href="sistema.html"><input type="button" value="Sistema"></a>
+              <td width="18%" height="33"><img src="../img/logo2_SuavTex.png" width="200" height="150" alt=""/></td>
+              <td width="82%" style="vertical-align: bottom"><div align="right">
+				  <a href="../index.html"><input type="button" value="Inicio" style="background-color: rgb(250,250,250,0.2);border: none; width: 150px; height: 60px; font-weight: bold;" onmouseover="this.style.backgroundColor='rgb(250,250,250,0.5)'" onmouseout="this.style.backgroundColor='rgb(250,250,250,0.2)'"></a>
+				  <a href="empresa.html"><input type="button" value="Empresa" style="background-color: rgb(250,250,250,0.2);border: none; width: 150px; height: 60px; font-weight: bold;" onmouseover="this.style.backgroundColor='rgb(250,250,250,0.5)'" onmouseout="this.style.backgroundColor='rgb(250,250,250,0.2)'"></a>
+				  <a href="productos.html"><input type="button" value="Productos" style="background-color: rgb(250,250,250,0.2);border: none; width: 150px; height: 60px; font-weight: bold;" onmouseover="this.style.backgroundColor='rgb(250,250,250,0.5)'" onmouseout="this.style.backgroundColor='rgb(250,250,250,0.2)'"></a>
+				  <input type="button" value="Contactos" style="background-color: rgb(0,0,0,0.2);border: none; width: 150px; height: 60px; font-weight: bold;" onmouseover="this.style.backgroundColor='rgb(0,0,0,0.25)'" onmouseout="this.style.backgroundColor='rgb(0,0,0,0.2)'">
+				  <a href="sistema.html"><input type="button" value="Sistema" style="background-color: rgb(250,250,250,0.2);border: none; width: 150px; height: 60px; font-weight: bold;" onmouseover="this.style.backgroundColor='rgb(250,250,250,0.5)'" onmouseout="this.style.backgroundColor='rgb(250,250,250,0.2)'"></a>
 			    </div></td>
             </tr>
           </tbody>
