--- a/ProyectoUnidad1/Pagina/html/FrmCliente.html
+++ b/ProyectoUnidad1/Pagina/html/FrmCliente.html
@@ -8,8 +8,8 @@
 <body style="margin: 0; background-color: aliceblue; font-family: 'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, 'sans-serif'">
 <h3 align="center">REGISTRAR CLIENTES</h3>
 <hr>
-<div style="width: 50%; margin: auto">
-  <form id="form1" name="form1" method="post">
+<div style="width: 50%; margin: auto" >
+  <form id="form1" name="form1" method="post" action="../php/PhpCliente.php">
     <fieldset style="border-radius: 10px">
       <legend><strong>Información del Cliente</strong></legend>
       <table align="center" width="100%" border="0">
