--- a/ProyectoUnidad1/Pagina/html/FrmVenta.html
+++ b/ProyectoUnidad1/Pagina/html/FrmVenta.html
@@ -9,7 +9,7 @@
 <h3 align="center">VENTAS</h3>
 <hr>
 <div style="width: 50%; margin: auto">
-  <form id="form1" name="form1" method="post">
+  <form id="form1" name="form1" method="post" action="../php/PhpVenta.php">
     <fieldset style="border-radius: 10px">
       <legend><strong>Venta</strong></legend>
       <table align="center" width="100%" border="0">
