--- a/ProyectoUnidad1/Pagina/html/FrmProducto.html
+++ b/ProyectoUnidad1/Pagina/html/FrmProducto.html
@@ -9,7 +9,7 @@
 <h3 align="center">REGISTRAR PRODUCTOS</h3>
 <hr>
 <div style="width: 50%; margin: auto">
-    <form id="form1" name="form1" method="post">
+    <form id="form1" name="form1" method="post" action="../php/PhpProducto.php">
         <fieldset style="border-radius: 10px">
             <legend><strong>Información del Producto</strong></legend>
             <table align="center" width="100%" border="0">
