--- a/ProyectoUnidad1/Pagina/index.html
+++ b/ProyectoUnidad1/Pagina/index.html
@@ -71,9 +71,9 @@
                                 <p>Experimenta el lujo de nuestros Duvet, perfectos para noches acogedoras.</p></td>
                             </tr >
                             <tr  align="center">
-                              <td colspan="2"><h3>Edredones</h3>
-                                <img src="img/edredon.png" width="100" height="100" alt=""/>
-                                <p>Nuestros edredones añaden un toque de elegancia y calidez a tu cama.</p>  </td>
+                              <td colspan="2"><h3>Cobijas</h3>
+                                <img src="img/cobija.png" width="100" height="100" alt=""/>
+                                <p>Nuestras cobijas añaden un toque de elegancia y calidez a tu cama.</p>  </td>
 							  </tr>
                           </tbody>
                         </table></td>
