--- a/ProyectoUnidad1/Pagina/html/FrmDevolucion.html
+++ b/ProyectoUnidad1/Pagina/html/FrmDevolucion.html
@@ -31,34 +31,62 @@
             <td><label for="productosD">Productos devueltos:</label>
               <br>
               <select id="productosD1" name="productosD1" required style="width: 92%; height: 30px">
-                <option value="productoD1">Producto 1</option>
-                <option value="productoD2">Producto 2</option>
-                <option value="productoD3">Producto 3</option>
-                <option value="productoD4">Producto 4</option>
+			<option value="Tela | CottonCraft">Tela | CottonCraft</option>
+			<option value="Tela | SoftSerenity Linen">Tela | SoftSerenity Linen</option>
+			<option value="Tela | PureGauze">Tela | PureGauze</option>
+            <option value="Sábanas | EvoSheets">Sábanas | EvoSheets</option>
+			<option value="Sábanas | Luxe Bliss">Sábanas | Luxe Bliss</option>
+			<option value="Cobijas | CozyBlend">Cobijas | CozyBlend</option>
+			<option value="Cobijas | WarmNova">Cobijas | WarmNova</option>
+			<option value="Duvets | SoftNest">Duvets | SoftNest</option>
+			<option value="Duvets | CloudLux">Duvets | CloudLux</option>
+			<option value="Cobertores | WrapVibe">Cobertores | WrapVibe</option>
+			<option value="Cobertores | CuddleWave">Cobertores | CuddleWave</option>
               </select>
               <br>
               <select id="productosD2" name="productosD2" required style="width: 92%; height: 30px">
-                <option value="nada">-</option>
-                <option value="productoD1">Producto 1</option>
-                <option value="productoD2">Producto 2</option>
-                <option value="productoD3">Producto 3</option>
-                <option value="productoD4">Producto 4</option>
+				  <option value="nada">-</option>
+					<option value="Tela | CottonCraft">Tela | CottonCraft</option>
+					<option value="Tela | SoftSerenity Linen">Tela | SoftSerenity Linen</option>
+					<option value="Tela | PureGauze">Tela | PureGauze</option>
+					<option value="Sábanas | EvoSheets">Sábanas | EvoSheets</option>
+					<option value="Sábanas | Luxe Bliss">Sábanas | Luxe Bliss</option>
+					<option value="Cobijas | CozyBlend">Cobijas | CozyBlend</option>
+					<option value="Cobijas | WarmNova">Cobijas | WarmNova</option>
+					<option value="Duvets | SoftNest">Duvets | SoftNest</option>
+					<option value="Duvets | CloudLux">Duvets | CloudLux</option>
+					<option value="Cobertores | WrapVibe">Cobertores | WrapVibe</option>
+					<option value="Cobertores | CuddleWave">Cobertores | CuddleWave</option>
               </select>
               <br>
               <select id="productosD3" name="productosD3" required style="width: 92%; height: 30px">
-                <option value="nada">-</option>
-                <option value="productoD1">Producto 1</option>
-                <option value="productoD2">Producto 2</option>
-                <option value="productoD3">Producto 3</option>
-                <option value="productoD4">Producto 4</option>
+				  <option value="nada">-</option>
+					<option value="Tela | CottonCraft">Tela | CottonCraft</option>
+					<option value="Tela | SoftSerenity Linen">Tela | SoftSerenity Linen</option>
+					<option value="Tela | PureGauze">Tela | PureGauze</option>
+					<option value="Sábanas | EvoSheets">Sábanas | EvoSheets</option>
+					<option value="Sábanas | Luxe Bliss">Sábanas | Luxe Bliss</option>
+					<option value="Cobijas | CozyBlend">Cobijas | CozyBlend</option>
+					<option value="Cobijas | WarmNova">Cobijas | WarmNova</option>
+					<option value="Duvets | SoftNest">Duvets | SoftNest</option>
+					<option value="Duvets | CloudLux">Duvets | CloudLux</option>
+					<option value="Cobertores | WrapVibe">Cobertores | WrapVibe</option>
+					<option value="Cobertores | CuddleWave">Cobertores | CuddleWave</option>
               </select>
               <br>
               <select id="productosD4" name="productosD4" required style="width: 92%; height: 30px">
-                <option value="nada">-</option>
-                <option value="productoD1">Producto 1</option>
-                <option value="productoD2">Producto 2</option>
-                <option value="productoD3">Producto 3</option>
-                <option value="productoD4">Producto 4</option>
+				  <option value="nada">-</option>
+					<option value="Tela | CottonCraft">Tela | CottonCraft</option>
+					<option value="Tela | SoftSerenity Linen">Tela | SoftSerenity Linen</option>
+					<option value="Tela | PureGauze">Tela | PureGauze</option>
+					<option value="Sábanas | EvoSheets">Sábanas | EvoSheets</option>
+					<option value="Sábanas | Luxe Bliss">Sábanas | Luxe Bliss</option>
+					<option value="Cobijas | CozyBlend">Cobijas | CozyBlend</option>
+					<option value="Cobijas | WarmNova">Cobijas | WarmNova</option>
+					<option value="Duvets | SoftNest">Duvets | SoftNest</option>
+					<option value="Duvets | CloudLux">Duvets | CloudLux</option>
+					<option value="Cobertores | WrapVibe">Cobertores | WrapVibe</option>
+					<option value="Cobertores | CuddleWave">Cobertores | CuddleWave</option>
               </select></td>
             <td><label for="cantidadD1">Cantidad de cada producto:</label><br>
               <input type="number" id="cantidadD1" name="cantidadD1" required placeholder="Ingrese la cantidad" value="1" min="1" style="width: 15%; height: 24px">
