--- a/ProyectoUnidad1/Pagina/html/FrmProducto.html
+++ b/ProyectoUnidad1/Pagina/html/FrmProducto.html
@@ -24,8 +24,11 @@
                             <br><br>
                         <label for="categoriaProducto">Categoría del producto:</label><br>
                         <select name="categoriaProducto" id="categoriaProducto" style="width: 92%; height: 30px">
-                          <option>Tela</option>
-                          <option>Ropa de cama</option>
+                          <option>Telas</option>
+                          <option>Sábanas</option>
+						  <option>Cobijas</option>
+						  <option>Duvets</option>
+						  <option>Cobertores</option>
                           <option>Otros</option>
                         </select></td>
                         <td width="50%">
