--- a/ProyectoUnidad1/Pagina/html/FrmVenta.html
+++ b/ProyectoUnidad1/Pagina/html/FrmVenta.html
@@ -47,31 +47,60 @@
             <td><label for="productos">Productos vendidos:</label><br>
 
         <select id="productos1" name="productos1" required style="width: 92%; height: 30px">
-			<option value="producto1">Producto 1</option>
-            <option value="producto2">Producto 2</option>
-			<option value="producto3">Producto 3</option>
-			<option value="producto4">Producto 4</option>
+			<option value="Tela | CottonCraft">Tela | CottonCraft</option>
+			<option value="Tela | SoftSerenity Linen">Tela | SoftSerenity Linen</option>
+			<option value="Tela | PureGauze">Tela | PureGauze</option>
+            <option value="Sábanas | EvoSheets">Sábanas | EvoSheets</option>
+			<option value="Sábanas | Luxe Bliss">Sábanas | Luxe Bliss</option>
+			<option value="Cobijas | CozyBlend">Cobijas | CozyBlend</option>
+			<option value="Cobijas | WarmNova">Cobijas | WarmNova</option>
+			<option value="Duvets | SoftNest">Duvets | SoftNest</option>
+			<option value="Duvets | CloudLux">Duvets | CloudLux</option>
+			<option value="Cobertores | WrapVibe">Cobertores | WrapVibe</option>
+			<option value="Cobertores | CuddleWave">Cobertores | CuddleWave</option>
+			
         </select><br>
 			<select id="productos2" name="productos2" required style="width: 92%; height: 30px">
             <option value="nada">-</option>
-			<option value="producto1">Producto 1</option>
-            <option value="producto2">Producto 2</option>
-			<option value="producto3">Producto 3</option>
-			<option value="producto4">Producto 4</option>
+			<option value="Tela | CottonCraft">Tela | CottonCraft</option>
+			<option value="Tela | SoftSerenity Linen">Tela | SoftSerenity Linen</option>
+			<option value="Tela | PureGauze">Tela | PureGauze</option>
+            <option value="Sábanas | EvoSheets">Sábanas | EvoSheets</option>
+			<option value="Sábanas | Luxe Bliss">Sábanas | Luxe Bliss</option>
+			<option value="Cobijas | CozyBlend">Cobijas | CozyBlend</option>
+			<option value="Cobijas | WarmNova">Cobijas | WarmNova</option>
+			<option value="Duvets | SoftNest">Duvets | SoftNest</option>
+			<option value="Duvets | CloudLux">Duvets | CloudLux</option>
+			<option value="Cobertores | WrapVibe">Cobertores | WrapVibe</option>
+			<option value="Cobertores | CuddleWave">Cobertores | CuddleWave</option>
         </select><br>
 			<select id="productos3" name="productos3" required style="width: 92%; height: 30px">
             <option value="nada">-</option>
-			<option value="producto1">Producto 1</option>
-            <option value="producto2">Producto 2</option>
-			<option value="producto3">Producto 3</option>
-			<option value="producto4">Producto 4</option>
+			<option value="Tela | CottonCraft">Tela | CottonCraft</option>
+			<option value="Tela | SoftSerenity Linen">Tela | SoftSerenity Linen</option>
+			<option value="Tela | PureGauze">Tela | PureGauze</option>
+            <option value="Sábanas | EvoSheets">Sábanas | EvoSheets</option>
+			<option value="Sábanas | Luxe Bliss">Sábanas | Luxe Bliss</option>
+			<option value="Cobijas | CozyBlend">Cobijas | CozyBlend</option>
+			<option value="Cobijas | WarmNova">Cobijas | WarmNova</option>
+			<option value="Duvets | SoftNest">Duvets | SoftNest</option>
+			<option value="Duvets | CloudLux">Duvets | CloudLux</option>
+			<option value="Cobertores | WrapVibe">Cobertores | WrapVibe</option>
+			<option value="Cobertores | CuddleWave">Cobertores | CuddleWave</option>
         </select><br>
 			<select id="productos4" name="productos4" required style="width: 92%; height: 30px">
             <option value="nada">-</option>
-			<option value="producto1">Producto 1</option>
-            <option value="producto2">Producto 2</option>
-			<option value="producto3">Producto 3</option>
-			<option value="producto4">Producto 4</option>
+			<option value="Tela | CottonCraft">Tela | CottonCraft</option>
+			<option value="Tela | SoftSerenity Linen">Tela | SoftSerenity Linen</option>
+			<option value="Tela | PureGauze">Tela | PureGauze</option>
+            <option value="Sábanas | EvoSheets">Sábanas | EvoSheets</option>
+			<option value="Sábanas | Luxe Bliss">Sábanas | Luxe Bliss</option>
+			<option value="Cobijas | CozyBlend">Cobijas | CozyBlend</option>
+			<option value="Cobijas | WarmNova">Cobijas | WarmNova</option>
+			<option value="Duvets | SoftNest">Duvets | SoftNest</option>
+			<option value="Duvets | CloudLux">Duvets | CloudLux</option>
+			<option value="Cobertores | WrapVibe">Cobertores | WrapVibe</option>
+			<option value="Cobertores | CuddleWave">Cobertores | CuddleWave</option>
         </select>
 			  
 			  </td>
