--- a/ProyectoUnidad1/Pagina/html/sistema.html
+++ b/ProyectoUnidad1/Pagina/html/sistema.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>pagina</title>
+<link rel="icon" href="../img/logo2_SuavTex.png" type="image/x-icon">
+<title>SUAVETEX | Sistema</title>
 </head>
 
-<body style="margin: 0; background-color: aliceblue; font-family: 'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, 'sans-serif'">
-<table width="100%" border="0" style="padding: 0; margin: 0;">
+<body style="margin: 0; background-color: aliceblue; font-family: Cambria, 'Hoefler Text', 'Liberation Serif', Times, 'Times New Roman', 'serif'"><table width="100%" border="0" style="padding: 0; margin: 0;">
   <tbody>
     <tr>
       <td><header style="background-color: #08DD81">
@@ -27,7 +27,7 @@
         </header></td>
     </tr>
     <tr>
-      <td height="660"><main>
+      <td height="726"><main>
           <div style="width: 350px; margin: auto;">
             <fieldset style="border-radius: 10px;">
               <legend><b>Inicio de sesión</b></legend>
@@ -57,12 +57,9 @@
     </tr>
     <tr>
       <td style="background-color: #151515; color: azure;"><footer>
-          <h3 align="center">&nbsp;</h3>
-          <p>&nbsp;</p>
-          <h3 align="center">Pie de pagina</h3>
-          <p>&nbsp;</p>
-          <p>&nbsp;</p>
-        </footer></td>
+		  <br>
+        <p align="right" style="font-size: 0.8rem">&copy; 2023 SUAVTEX. Todos los derechos reservados. &nbsp;&nbsp;</p>
+      </footer></td>
     </tr>
   </tbody>
 </table>
