--- a/ProyectoUnidad1/Pagina/html/sistemaFormularios.html
+++ b/ProyectoUnidad1/Pagina/html/sistemaFormularios.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>pagina</title>
+<link rel="icon" href="../img/logo2_SuavTex.png" type="image/x-icon">
+<title>SUAVETEX | Sistema</title>
 </head>
 
-<body style="margin: 0; background-color: aliceblue; font-family: 'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, 'sans-serif'">
+<body style="margin: 0; background-color: aliceblue; font-family: Cambria, 'Hoefler Text', 'Liberation Serif', Times, 'Times New Roman', 'serif'">
 <table width="100%" border="0">
   <tbody>
     <tr>
