--- a/ProyectoUnidad1 - Cambios/Pagina/html/sistemaFormularios.html
+++ b/ProyectoUnidad1 - Cambios/Pagina/html/sistemaFormularios.html
@@ -22,11 +22,12 @@
 <table width="100%" border="0">
   <tbody>
     <tr>
-      <td height="69" ><header style="background-color: #08DD81">
-        <table width="100%" border="0">
-          <tbody>
-            <tr>
-              <td width="18%" height="33"><img src="../img/logo2_SuavTex.png" width="200" height="150" alt=""/></td>
+     <td height="69" >
+          <header style="background-color:#95DEB1">
+            <table width="100%" height="100%" border="0">
+              <tbody>
+                <tr>
+                  <td width="18%" height="33" align="center"><img src="../img/logo2_SuavTex.png" width="200" height="170" alt=""/></td>
               <td width="82%"><div align="right">
 				  <a href="sistema.html"><input type="button" value="Cerrar Sesión" style="background-color: rgb(250,250,250,0.2);border: none; width: 125px; height: 40px; font-weight: bold;" onmouseover="this.style.backgroundColor='rgb(0,0,0,0.3)'" onmouseout="this.style.backgroundColor='rgb(250,250,250,0.2)'"></a>&nbsp;&nbsp;&nbsp;&nbsp;
 				  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
