--- a/ProyectoUnidad1 - Cambios/Pagina/index.html
+++ b/ProyectoUnidad1 - Cambios/Pagina/index.html
@@ -34,7 +34,7 @@
                       <a href="html/empresa.html"><input type="button" value="Empresa" style="background-color: rgb(250,250,250,0.2);border: none; width: 150px; height: 60px; font-weight: bold;" onmouseover="this.style.backgroundColor='rgb(250,250,250,0.5)'" onmouseout="this.style.backgroundColor='rgb(250,250,250,0.2)'"></a>
                       <a href="html/productos.html"><input type="button" value="Productos" style="background-color: rgb(250,250,250,0.2);border: none; width: 150px; height: 60px; font-weight: bold;" onmouseover="this.style.backgroundColor='rgb(250,250,250,0.5)'" onmouseout="this.style.backgroundColor='rgb(250,250,250,0.2)'"></a>
                       <a href="html/contactos.html"><input type="button" value="Contactos" style="background-color: rgb(250,250,250,0.2);border: none; width: 150px; height: 60px; font-weight: bold;" onmouseover="this.style.backgroundColor='rgb(250,250,250,0.5)'" onmouseout="this.style.backgroundColor='rgb(250,250,250,0.2)'"></a>
-                      <a href="html/sistema.html"><input type="button" value="Contactos" style="background-color: rgb(250,250,250,0.2);border: none; width: 150px; height: 60px; font-weight: bold;" onmouseover="this.style.backgroundColor='rgb(250,250,250,0.5)'" onmouseout="this.style.backgroundColor='rgb(250,250,250,0.2)'"></a>
+                      <a href="html/sistema.html"><input type="button" value="Sistema" style="background-color: rgb(250,250,250,0.2);border: none; width: 150px; height: 60px; font-weight: bold;" onmouseover="this.style.backgroundColor='rgb(250,250,250,0.5)'" onmouseout="this.style.backgroundColor='rgb(250,250,250,0.2)'"></a>
                     </div>
                   </td>
                 </tr>
