--- a/ProyectoUnidad2/Money Minder/html/categorías.html
+++ b/ProyectoUnidad2/Money Minder/html/categorías.html
@@ -14,15 +14,15 @@
 		<a href="../index.html" class="selected">Salir</a>
     </div>
     <div class="content">
-      <h1 style="color: aliceblue">Categorías</h1>
+      <h1 style="color: aliceblue">Ingresos y Egresos</h1>
     </div>
   </main>
   <nav class="sidebar">
 	   <button class="close-btn" style="height: 9%; width: 100%;" onclick="toggleSidebar()">✕</button>
     <ul>
 	 <li><a id="opResumen" href="resumen.html" >Resumen</a></li>
-	 <li><a id="opTransacciones" href="transacciones.html">Transacciones</a></li>
-	  <li><a id="opCategorias" href="categorías.html" class="selected">Categorías</a></li>
+	 <li><a id="opTransacciones" href= "ingresos.html">Ingresos</a></li>
+	  <li><a id="opCategorias" href="egresos.html" class="selected">Egresos</a></li>
 	  <li><a id="opInformes" href="informes.html">Informes</a></li>
 	  <li><a id="opExportar" href="exportar.html">Exportar</a></li>
     </ul>
