--- a/ProyectoUnidad2/Money Minder/html/informes.html
+++ b/ProyectoUnidad2/Money Minder/html/informes.html
@@ -21,10 +21,10 @@
     <button class="close-btn" style="height: 9%; width: 100%" onclick="toggleSidebar()">✕</button>
     <ul>
 	 <li><a id="opResumen" href="resumen.html" >Resumen</a></li>
-	 <li><a id="opTransacciones" href="transacciones.html">Transacciones</a></li>
-	  <li><a id="opCategorias" href="categorías.html" >Categorías</a></li>
-	  <li><a id="opInformes" href="informes.html" class="selected">Informes</a></li>
-	  <li><a id="opExportar" href="exportar.html" >Exportar</a></li>
+     <li><a id="opTransacciones" href= "ingresos.html">Ingresos</a></li>
+      <li><a id="opCategorias" href="egresos.html" >Egresos</a></li>
+      <li><a id="opInformes" href="informes.html" class="selected">Informes</a></li>
+      <li><a id="opExportar" href="exportar.html">Exportar</a></li>
     </ul>
   </nav>
 </div>
